Add additional blocks to Base.html

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -21,6 +21,12 @@
   </head>
   <body>
     <h1>Welcome to the Learning Management System</h1>
+    
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs%}
+    {% endblock %}
 
   </body>
 </html>
