--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,45 @@
 
   </head>
   <body>
-    <h1>Welcome to the Learning Management System</h1>
-    
+    <header class="container-fluid fixed-top">
+      <div class="row">
+        <div class="row">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Learning Management System</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
+                      <li class="nav-item">
+                        <a class="nav-link" href="/admin/login/">Manage Content</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="/admin/auth/user">Manage Users</a>
+                      </li>
+                    {% endif %}
+                    <li class="nav-item">
+                      <form id="logout-form" method="post" action="{% url 'account_logout' %}" style="display: none;">
+                        {% csrf_token %}
+                      </form>
+                      <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
+                    </li>
+                  {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                  {% endif %}
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>    
+
     {% block content %}
     {% endblock %}
 
