--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-2 text-success">Bootstrap has been installed correctly if this text is green!</h1>
+    <h1 class="display-2 test-header">Bootstrap has been installed correctly if this text is green!</h1>
 {% endblock %}
