--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 
     {% block css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block js %}
@@ -21,9 +22,8 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-      <div class="row">
         <div class="row">
-          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <nav id="main-navbar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Learning Management System</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                       </li>
                     {% endif %}
                     <li class="nav-item">
-                      <form id="logout-form" method="post" action="{% url 'account_logout' %}" style="display: none;">
+                      <form id="logout-form" method="post" action="{% url 'account_logout' %}">
                         {% csrf_token %}
                       </form>
                       <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
@@ -55,9 +55,11 @@
               </div>
             </div>
           </nav>
-        </div>
       </div>
-    </header>    
+    </header>
+
+    <!-- Spacer element to add margin below navbar -->
+    <div class="spacer-element"></div>
 
     {% block content %}
     {% endblock %}
