--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="row">
           <nav id="main-navbar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Learning Management System</a>
+              <a class="navbar-brand" href="/">Learning Management System</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
