--- a/templates/base.html
+++ b/templates/base.html
@@ -45,11 +45,11 @@
                       <form id="logout-form" method="post" action="{% url 'account_logout' %}">
                         {% csrf_token %}
                       </form>
-                      <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Logout</a>
+                      <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Log Out</a>
                     </li>
                   {% else %}
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                      <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
                     </li>
                   {% endif %}
                 </ul>
