--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 offset-sm-3 col-12">
-      <h1 class="auth-heading">Login</h1>
+      <h1 class="auth-heading">Log In</h1>
       <div class="auth-container">              
         
         <form class="login auth-form" method="POST" action="{% url 'account_login' %}">
