--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,38 +1,54 @@
-{% extends "account/base_entrance.html" %}
-{% load allauth i18n %}
-{% block head_title %}
-    {% trans "Signup" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load static %}
+
+{% load i18n %}
+
+{% block title %}LMS - {% trans "Sign Up" %}{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign Up" %}
-    {% endelement %}
-    {% setvar link %}
-        <a href="{{ login_url }}">
-        {% endsetvar %}
-        {% setvar end_link %}
-        </a>
-    {% endsetvar %}
-    {% element p %}
-        {% blocktranslate %}Already have an account? Then please {{ link }}sign in{{ end_link }}.{% endblocktranslate %}
-    {% endelement %}
-    {% if not SOCIALACCOUNT_ONLY %}
-        {% url 'account_signup' as action_url %}
-        {% element form form=form method="post" action=action_url tags="entrance,signup" %}
-            {% slot body %}
-                {% csrf_token %}
-                {% element fields form=form unlabeled=True %}
-                {% endelement %}
-                {{ redirect_field }}
-            {% endslot %}
-            {% slot actions %}
-                {% element button tags="prominent,signup" type="submit" %}
-                    {% trans "Sign Up" %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
-    {% endif %}
-    {% if SOCIALACCOUNT_ENABLED %}
-        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
-    {% endif %}
-{% endblock content %}
+<link rel="stylesheet" href="{% static 'css/auth.css' %}">
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3 col-12">
+      <h1 class="auth-heading">{% trans "Sign Up" %}</h1>
+      <div class="auth-container">              
+        <form class="signup auth-form" method="POST" action="{% url 'account_signup' %}">
+            {% csrf_token %}
+            
+            {% if form.errors %}
+                <ul>
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+                </ul>
+            {% endif %}
+            
+            <div class="auth-form-group">
+              {{ form.username }}
+            </div>
+            
+            <div class="auth-form-group">
+              {{ form.email }}
+            </div>
+            
+            <div class="auth-form-group">
+              {{ form.password1 }}
+            </div>
+        
+            <div class="auth-form-group">
+              {{ form.password2 }}
+            </div>
+            
+            <div class="auth-button-container">
+              <button class="primaryAction primary-button" type="submit">{% trans "Sign Up" %}</button>
+            </div>
+        </form>
+             
+    </div>
+  </div>
+</div>
+
+{% endblock %}
