--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,9 @@
                       <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Log Out</a>
                     </li>
                   {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                  </li>
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
                     </li>
