--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -46,6 +46,10 @@
               <button class="primaryAction primary-button" type="submit">{% trans "Sign Up" %}</button>
             </div>
         </form>
+
+        <div class="auth-link-text">
+            <a href="{% url 'account_login' %}">{% trans "Already have an account?" %}</a>
+        </div>
              
     </div>
   </div>
