--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,32 +1,44 @@
-{% extends "account/base_entrance.html" %}
-{% load i18n allauth account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% extends "base.html" %}
+{% load static %}
+{% load i18n %}
+
+{% block title %}LMS - {% trans "Reset Password" %}{% endblock %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
+<link rel="stylesheet" href="{% static 'css/auth.css' %}">
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-3 col-12">
+      <h1 class="auth-heading">{% trans "Reset Password" %}</h1>
+      <div class="auth-container">              
+        <form class="password-reset auth-form" method="POST" action="{% url 'account_reset_password' %}">
             {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
-{% endblock content %}
+            
+            {% if form.errors %}
+                <ul>
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+                </ul>
+            {% endif %}
+            
+            <div class="auth-form-group">
+              {{ form.email }}
+            </div>
+            
+            <div class="auth-button-container">
+              <button class="primaryAction primary-button" type="submit">{% trans "Reset Password" %}</button>
+            </div>
+        </form>
+
+        <div class="auth-link-text">
+            <a href="{% url 'account_login' %}">{% trans "Remembered your password? Login here!" %}</a>
+        </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
