--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Learning Management System{% endblock %}</title>
   
-  
     {% block css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -16,58 +15,60 @@
 
     {% block js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vVc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/33c5bbb6e7.js" crossorigin="anonymous"></script>
     {% endblock%}
 
   </head>
   <body>
-    <header class="container-fluid fixed-top">
-        <div class="row">
-          <nav id="main-navbar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/">Learning Management System</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                      <li class="nav-item">
-                        <a class="nav-link" href="/admin/login/">Manage Content</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="/admin/auth/user">Manage Users</a>
-                      </li>
-                    {% endif %}
-                    <li class="nav-item">
-                      <form id="logout-form" method="post" action="{% url 'account_logout' %}">
-                        {% csrf_token %}
-                      </form>
-                      <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit();">Log Out</a>
-                    </li>
-                  {% else %}
+    <div class="container-fluid d-flex p-0">
+      <nav id="main-navbar" class="navbar navbar-expand-lg flex-column p-0">
+        <div class="container-fluid d-flex flex-column align-items-start p-0">
+          <a class="navbar-brand mx-3 my-3" href="/">
+            <div class="brand-text">Learning</div>
+            <div class="brand-text">Management</div>
+            <div class="brand-text">System</div>
+          </a>
+          <button class="navbar-toggler mx-3 mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse flex-column w-100" id="navbarSupportedContent">
+            <ul class="navbar-nav flex-column w-100">
+              {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                    <a class="nav-link mx-3" href="/admin/login/">Manage Content</a>
                   </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
-                    </li>
-                  {% endif %}
-                </ul>
-              </div>
-            </div>
-          </nav>
-      </div>
-    </header>
+                  <li class="nav-item">
+                    <a class="nav-link mx-3" href="/admin/auth/user">Manage Users</a>
+                  </li>
+                {% endif %}
+                <li class="nav-item">
+                  <form id="logout-form" method="post" action="{% url 'account_logout' %}">
+                    {% csrf_token %}
+                  </form>
+                  <a class="nav-link mx-3" href="#" onclick="document.getElementById('logout-form').submit();">Log Out</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'account_signup' %}">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'account_login' %}">Log In</a>
+                </li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-    <!-- Spacer element to add margin below navbar -->
-    <div class="spacer-element"></div>
-
-    {% block content %}
-    {% endblock %}
+      <!-- Main Content Area -->
+      <main class="content-area flex-grow-1">
+        {% block content %}
+        {% endblock %}
+      </main>
+    </div>
 
     {% block postloadjs%}
     {% endblock %}
