--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,11 @@
     {% block css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMNbpOOZhw3COk5gjN5T1gJ97aDw3Pwl8XKBypq" crossorigin="anonymous">
     {% endblock %}
 
     {% block js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vVc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/33c5bbb6e7.js" crossorigin="anonymous"></script>
     {% endblock%}
 
@@ -35,27 +34,58 @@
           </button>
           <div class="collapse navbar-collapse flex-column w-100" id="navbarSupportedContent">
             <ul class="navbar-nav flex-column w-100">
+              <li class="nav-divider"></li>
+
               {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
+                <!-- First set of nav items -->
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-regular fa-gauge"></i> My Dashboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-route"></i> My Paths</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-award"></i> My Badges</a>
+                </li>
+
+                <!-- Divider -->
+                <li class="nav-divider"></li>
+
+                <!-- Second set of nav items -->
+                {% if user_role == 'trainer' or user_role == 'manager' %}
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="/admin/login/">Manage Content</a>
+                    <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-chart-user"></i> Student Metrics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="/admin/auth/user">Manage Users</a>
+                    <a class="nav-link mx-3" href="/admin/content/"><i class="fa-sharp fa-solid fa-file-pen"></i> Manage Content</a>
                   </li>
                 {% endif %}
+                {% if user_role == 'manager' %}
+                  <li class="nav-item">
+                    <a class="nav-link mx-3" href="/admin/auth/user/"><i class="fa-sharp fa-solid fa-users-gear"></i> Manage Users</a>
+                  </li>
+                {% endif %}
+
+                <!-- Divider -->
+                <li class="nav-divider"></li>
+
+                <!-- Third set of nav items -->
+                <li class="nav-item">
+                  <a class="nav-link mx-3" href="{% url 'profile' %}"><i class="fa-sharp fa-solid fa-gears"></i> Settings</a>
+                </li>
                 <li class="nav-item">
                   <form id="logout-form" method="post" action="{% url 'account_logout' %}">
                     {% csrf_token %}
                   </form>
-                  <a class="nav-link mx-3" href="#" onclick="document.getElementById('logout-form').submit();">Log Out</a>
+                  <a class="nav-link mx-3" href="#" onclick="document.getElementById('logout-form').submit();"><i class="fa-sharp fa-solid fa-power-off"></i> Log Out</a>
                 </li>
               {% else %}
+                <!-- Sign Up/Log In items -->
                 <li class="nav-item">
-                  <a class="nav-link mx-3" href="{% url 'account_signup' %}">Sign Up</a>
+                  <a class="nav-link mx-3" href="{% url 'account_signup' %}"><i class="fa-sharp fa-solid fa-user-plus"></i>Sign Up</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-3" href="{% url 'account_login' %}">Log In</a>
+                  <a class="nav-link mx-3" href="{% url 'account_login' %}"><i class="fa-sharp fa-solid fa-right-to-bracket"></i> Log In</a>
                 </li>
               {% endif %}
             </ul>
