--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,6 @@
     <title>{% block title %}Learning Management System{% endblock %}</title>
     <link rel="icon" type="image/svg+xml" href="{% static 'media/images/favicon.svg' %}">
 
-  
     {% block css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -79,7 +78,9 @@
                   <form id="logout-form" method="post" action="{% url 'account_logout' %}">
                     {% csrf_token %}
                   </form>
-                  <a class="nav-link mx-3" href="#" onclick="document.getElementById('logout-form').submit();"><i class="fa-sharp fa-solid fa-power-off"></i> Log Out</a>
+                  <a class="nav-link mx-3 logout-link" href="#" onclick="document.getElementById('logout-form').submit();">
+                    <i class="fa-sharp fa-solid fa-power-off logout-icon"></i> Log Out
+                  </a>
                 </li>
               {% else %}
                 <!-- Sign Up/Log In items -->
