Update back button styling

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -136,7 +136,7 @@
                     duration: 0.5,
                     width: "auto", 
                     onComplete: function () {
-                        viewModulesButton.innerHTML = '<i class="fas fa-arrow-left"></i> Back';
+                        viewModulesButton.innerHTML = '<i class="back-icon fa-sharp fa-arrow-left"></i>Back';
                     }
                 });
 
