--- a/content/templates/content/module_detail.html
+++ b/content/templates/content/module_detail.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <div class="module-detail-container">
+    <a href="{{ request.META.HTTP_REFERER }}" class="primary-button">
+        <i class="back-icon fa-sharp fa-arrow-left"></i>Back
+    </a>
+
     <h1 class="module-heading">{{ module.name }}</h1>
     <h2 class="lesson-description">{{ module.description }}</h2>
 
