--- a/static/css/base.css
+++ b/static/css/base.css
@@ -290,7 +290,7 @@ body {
 
 .path-card {
     background-color: var(--background-color-dark);
-    border: var(--accent-color-1) solid 3px;
+    border: rgba(255, 135, 27, 0.8) solid 4px;
     border-radius: 15px;
     padding: 1.5rem;
     padding-bottom: 2rem;
@@ -302,15 +302,43 @@ body {
     margin-top: 2rem;
 }
 
+.path-card:hover {
+    border: rgba(255, 135, 27, 1) solid 4px;
+}
+
+.path-card.completed {
+    border: rgba(152, 175, 131, 0.8) solid 4px;
+}
+
+.path-card.completed:hover {
+    border: rgba(152, 175, 131, 1) solid 4px;
+}
+
+
+
 .path-card h3 {
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
+    color: var(--accent-color-1);
+}
+
+.path-card.completed h3 {
     color: var(--accent-color-2);
+}
+
+.path-completed-icon {
+    color: var(--accent-color-2);
+    vertical-align: middle;
+    font-size: 2rem;
+    margin: 0;
+    margin-top: -0.5rem;
+    margin-bottom: 0.75rem;
+
 }
 
 .path-card p {
     font-size: 1rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .path-card a {
@@ -326,10 +354,11 @@ body {
 
 /* Module Display Animations */
 .modules-container {
-    margin-top: 0.5rem;
-    max-height: 300px;
+    margin-top: -2rem;
+    max-height: 1000px;
     overflow-y: auto;
     transition: max-height 0.3s ease-in-out;
+    text-align: left;
 }
 
 .modules-container ul {
@@ -351,7 +380,12 @@ body {
 
 .modules-container ul li a {
     border-bottom: none;
-    color: var(--text-color);
+    margin-bottom: 5rem;
+    color: var(--accent-color-1);
+}
+
+.modules-container ul li p {
+    margin-top: 1rem;
 }
 
 /* Module Detail Page Styling */
@@ -446,9 +480,13 @@ body {
 
 .lesson-completed-icon {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 10px;
+    right: 10px;
     color: var(--accent-color-2);
+    font-size: 2rem;
+}
+
+.lesson-completed-icon i {
     font-size: 2rem;
 }
 
