Add Dashboard outline and experimental textures

--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -3,4 +3,37 @@
 {% block content %}
 <div class="content-area">
     <h1 class="profile-heading">Welcome to your Dashboard, {{ user.username }}</h1>
+    <div class="dashboard-container">
+
+        <div class="dashboard-area-1">
+            <div class="dashboard-cards">
+                <div class="dashboard-card">
+                    3
+                    <p class="card-text-below">Paths Completed</p>
+                </div>
+                <div class="dashboard-card">
+                    <p class="card-text-above">Modules Completed</p>
+                    8
+                </div>
+                <div class="dashboard-card">
+                    15
+                    <p class="card-text-below">Lessons Completed</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="dashboard-area-2">
+            <p></p>
+        </div>
+
+        <div class="dashboard-area-3">
+            <p></p>
+        </div>
+
+        <div class="dashboard-area-4">
+            <p></p>
+        </div>
+
+    </div>
+</div>
 {% endblock %}
