--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,6 +41,9 @@ body {
     overflow-x: hidden;
     padding-top: 1rem;
     border-right: 2px solid var(--text-color);
+    background-image: url("/static/media/images/Texture9.png");
+    background-size: 10px;
+    background-position: center;
 }
 
 .nav-divider {
@@ -503,4 +506,134 @@ body {
 
 .lesson-card.completed h3 {
     color: var(--accent-color-2);
+}
+
+/* Dashboard Styling */
+
+.dashboard-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    color: var(--text-color);
+    font-size: 3rem;
+}
+
+.dashboard-area-1 {
+    grid-area: 1 / 1 / 3 / 7;
+    background-color: var(--background-color-dark);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+    border-top: 5px solid var(--background-color-dark);
+    border-left: 5px solid var(--background-color-dark);
+    border-right: 5px solid var(--background-color-dark);
+    border-top-left-radius: 60px;
+    background-image: url("/static/media/images/Texture3.png");
+    background-size: 20px;
+    background-position: center;
+}
+
+.dashboard-cards {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.dashboard-card {
+    background-color: var(--background-color-dark);
+    color: var(--accent-color-1);
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 1rem;
+    text-align: center;
+    flex: 1;
+    margin: 0 3rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height: 150px;
+    width: 140px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-bottom: 4px solid rgba(0, 0, 0, 0.5);
+    border-left: 2px solid rgba(0, 0, 0, 0.253);
+    background-image: url("/static/media/images/Texture6.png");
+    background-size: 200px;
+    background-position: center;
+}
+
+.dashboard-card:hover {
+    transform: translateY(-5px);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 8px 20px;
+}
+
+.dashboard-card:nth-child(1),
+.dashboard-card:nth-child(3) {
+    transform: translateY(15px);
+}
+
+.dashboard-card:nth-child(2) {
+    transform: translateY(-15px);
+}
+
+.card-text-below, .card-text-above {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--text-color);
+    text-align: center;
+    white-space: nowrap;
+}
+
+.card-text-below {
+    top: -3.2rem;
+}
+
+.card-text-above {
+    bottom: -3.8rem;
+}
+
+.dashboard-area-2 {
+    grid-area: 1 / 7 / 3 / 9;
+    background-color: var(--background-color-main);
+    padding: 1rem;
+    border-top: 5px solid var(--background-color-dark);
+    border-right: 5px solid var(--background-color-dark);
+    border-top-right-radius: 60px;
+    background-image: url("/static/media/images/Texture7.png");
+    background-size: 60px;
+    background-position: top;
+}
+
+.dashboard-area-3 { 
+    grid-area: 3 / 1 / 7 / 4;
+    background-color: var(--background-color-main);
+    padding: 1rem;
+    border: 5px solid var(--background-color-dark);
+    border-bottom-left-radius: 60px;
+    height: 500px;
+    background-image: url("/static/media/images/Texture7.png");
+    background-size: 60px;
+    background-position: center;
+}
+
+.dashboard-area-4 {
+    grid-area: 3 / 4 / 7 / 9;
+    background-color: var(--background-color-dark);
+    padding: 1rem;
+    border-top: 5px solid var(--background-color-dark);
+    border-right: 5px solid var(--background-color-dark);
+    border-bottom: 5px solid var(--background-color-dark);
+    border-bottom-right-radius: 60px;
+    background-image: url("/static/media/images/Texture5.png");
+    background-size: 350px;
+    background-position: center;
 }
