--- a/profiles/templates/profiles/dashboard.html
+++ b/profiles/templates/profiles/dashboard.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="content-area">
+<div class="dashboard-content-area">
     <h1 class="profile-heading">Welcome to your Dashboard, {{ user.username }}</h1>
     <div class="dashboard-container">
 
         <div class="dashboard-area-1">
             <div class="dashboard-cards">
                 <div class="dashboard-card">
-                    3
+                    {{ completed_paths_count }}
                     <p class="card-text-below">Paths Completed</p>
                 </div>
                 <div class="dashboard-card">
                     <p class="card-text-above">Modules Completed</p>
-                    8
+                    {{ completed_modules_count }}
                 </div>
                 <div class="dashboard-card">
-                    15
+                    {{ completed_lessons_count }}
                     <p class="card-text-below">Lessons Completed</p>
                 </div>
             </div>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="dashboard-area-3">
-            <p></p>
+            <canvas id="completionChart" width="400" height="400"></canvas>
         </div>
 
         <div class="dashboard-area-4">
@@ -36,4 +36,18 @@
 
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script>
+    renderCompletionChart(
+        {{ completed_paths_count }},
+        {{ remaining_paths_count }},
+        {{ completed_modules_count }},
+        {{ remaining_modules_count }},
+        {{ completed_lessons_count }},
+        {{ remaining_lessons_count }}
+    );
+</script>
 {% endblock %}
