--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     {% block js %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/33c5bbb6e7.js" crossorigin="anonymous"></script>
-    {% endblock%}
+    {% endblock %}
 
   </head>
   <body>
@@ -103,8 +103,9 @@
       </main>
     </div>
 
-    {% block postloadjs%}
+    {% block postloadjs %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     {% endblock %}
-
   </body>
 </html>
